# drums-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: audio.h  fem.h  geometry.h  main.cpp  solver.h  test_polygon.cpp
